# claude-night-market

./: .cclsp.json  .feature-review.yaml  .gitignore  .linkcheckignore  .mcp.json  .pr-review-gaunlet-1.8.0.md  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CONSTITUTION.md  DEBLOAT_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLUGIN_DEPENDENCY_PATTERN.md  README.md  REFACTORING_SUMMARY.md  REFINEMENT_REPORT.md  RUFF_FIX_PLAN.md  STEWARDSHIP.md  TEST_PLAN.md  bloat-scan-report-20260109.md  cleanup-report.md  conftest.py  description-fix-strategy.md  description-optimization-plan.md  fix_all_plr2004.py  fix_plr2004.py  fix_plr2004_simple.py  fix_self_referential_constants.py  pyproject.toml  tag-submissions.json
plugins/abstract/: Makefile  README-HOOKS.md  README-UPDATE.md  README.md  openpackage.yml  pyproject.toml
plugins/abstract/.claude/: session-state.md
plugins/abstract/.claude-plugin/: metadata.json  plugin.json
plugins/abstract/agents/: insight-engine.md  meta-architect.md  plugin-validator.md  skill-auditor.md  skill-evaluator.md  skill-improver.md
plugins/abstract/commands/: aggregate-logs.md  analyze-hook.md  analyze-skill.md  bulletproof-skill.md  context-report.md  create-command.md  create-hook.md  create-skill.md  estimate-tokens.md  hooks-eval.md  make-dogfood.md  plugin-review.md  skills-eval.md  test-skill-wrapper.md  test-skill.md  validate-hook.md  validate-plugin.md
plugins/abstract/config/: abstract_config.yaml
plugins/abstract/data/: overlap_mappings.yaml
plugins/abstract/docs/: MECW-optimization-plan.md  claude-code-compatibility.md  extension-registry-guide.md  frontmatter-exceptions.md  governance.md  migration-guide.md  model-optimization-guide.md  multi-plugin-design.md  python-structure.md  skill-assurance-framework.md  skill-selection.md  skills-evaluation-report-2025-12-05.md  wrapper-development-guide.md
plugins/abstract/examples/: sanctum_integration_example.py  test-skill-migration-example.md
plugins/abstract/hooks/: aggregate_learnings_daily.py  homeostatic_monitor.py  hooks-observability.json  hooks.json  post-evaluation.json  post_learnings_stop.py  pre-skill-load.json  pre_skill_execution.py  skill_execution_logger.py  test_continual_metrics.py  test_skill_observability_proof.py
plugins/abstract/scripts/: README.md  abstract_validator.py  add_bdd_markers.py  aggregate_skill_logs.py  auto_promote_learnings.py  automation_setup.py  automation_validate.py  categorize_frontmatter.py  check_frontmatter.py  compatibility_validator.py  compliance_checker.py  context_optimizer.py  deferred_capture.py  discussion_enrichment.py  generate_trust_badges.py  hook_validator.py  improvement_suggester.py  insight_analyzer.py  insight_palace_bridge.py  insight_registry.py  insight_types.py  makefile_dogfooder.py  migration_analyzer.py  modular_analyze.py  modular_tokens.py  performance_benchmark.py  post_insights_to_discussions.py  post_learnings_to_discussions.py  post_review_insights.py  promote_discussion_to_issue.py  rules_validator.py  skill_analyzer.py  skill_graph.py  skill_utils.py  skill_validator.py  skills_auditor.py  token_estimator.py  token_usage_tracker.py  tool_performance_analyzer.py  update_changelog.py  (+4 more)
plugins/abstract/shared-modules/: anti-rationalization.md  iron-law-interlock.md  trigger-patterns.md
plugins/abstract/skills/: hook-scope-guide.md  validate-plugin-structure.md
plugins/abstract/src/: __init__.py  test_skill_wrapper.py  wrapper_base.py
plugins/abstract/tests/: README.md  conftest.py  test_base.py  test_compatibility_validator.py  test_deleted_tools_integration.py  test_errors.py  test_experience_library.py  test_frontmatter.py  test_hooks_homeostatic_monitor.py  test_hooks_pre_skill_execution.py  test_hooks_shared_skill_utils.py  test_hooks_skill_execution_logger.py  test_improvement_memory.py  test_improvement_queue.py  test_makefile_dogfooder.py  test_migration_analyzer.py  test_performance.py  test_rollback_reviewer.py  test_script_permissions.py  test_skill_structure.py  test_test_skill_wrapper.py  test_utils_token_analyzer.py  test_wrapper_infrastructure.py
plugins/archetypes/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/archetypes/.claude-plugin/: metadata.json  plugin.json
plugins/egregore/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/egregore/.claude-plugin/: plugin.json
plugins/egregore/agents/: orchestrator.md  sentinel.md
plugins/egregore/commands/: dismiss.md  summon.md
plugins/egregore/hooks/: _manifest_utils.py  hooks.json  session_start_hook.py  stop_hook.py  user_prompt_hook.py
plugins/egregore/scripts/: budget.py  config.py  conventions.py  deferred_capture.py  discussions.py  harvester.py  install_launchd.sh  learning.py  manifest.py  multi_repo.py  notify.py  parallel.py  scout.py  specialists.py  stage_parallel.py  watchdog.sh
plugins/egregore/tests/: __init__.py  conftest.py  test_budget.py  test_config.py  test_conventions.py  test_discussions.py  test_harvester.py  test_integration.py  test_learning.py  test_manifest.py  test_multi_repo.py  test_notify.py  test_parallel.py  test_quality_integration.py  test_scout.py  test_session_start_hook.py  test_specialists.py  test_stop_hook.py  (+1 more)
plugins/gauntlet/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/herald/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/memory-palace/: Makefile  README.md  _typos.toml  openpackage.yml  pyproject.toml
plugins/parseltongue/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/pensive/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/phantom/: Makefile  openpackage.yml  pyproject.toml
plugins/scribe/: Makefile  README.md  openpackage.yml  plugin.json  pyproject.toml
plugins/scry/: Makefile  README.md  openpackage.yml  pyproject.toml
plugins/spec-kit/: .gitignore  Makefile  PHASE2_TASK4_IMPLEMENTATION_REPORT.md  PHASE3_IMPLEMENTATION_REPORT.md  README.md  openpackage.yml  pyproject.toml
plugins/tome/: Makefile  README.md  openpackage.yml  pyproject.toml
(+2499 files in other folders)
