[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-night-market"
version = "0.1.0"
description = "Root workspace config for tests and linting"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
include = [
    "pyproject.toml",
    "README.md",
    "LICENSE"
]
dependencies = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "pytest-bdd>=7.2.0",
  "pytest-xdist>=3.6.0",
  "pytest-json-report>=1.5.0",
  "coverage[toml]>=7.6.0",
  "jsonschema>=4.22.0",
  "pyyaml>=6.0.2",
  "toml>=0.10.2",
  "rich>=13.9.0",
  "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-ra",
    "--disable-warnings",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "network: Tests requiring network access",
    "plugin: Plugin-specific tests",
    "skill: Skill-specific tests",
    "hook: Hook-specific tests",
    "command: Command-specific tests",
]

[tool.coverage.run]
source = ["." ]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
    "*/.venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 85
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["plugins", "tests"]

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "PLR2004",  # Magic value comparison
    "S101",  # Use of assert (acceptable in tests and production code)
    "E402",  # Module imports not at top of file (acceptable in some cases)
    "D203",  # One blank line before class docstring (conflicts with D211)
    "D213",  # Multi-line summary second line (conflicts with D212)
    "COM812",  # Trailing commas clash with formatter
    "D205",  # 1 blank line required between summary line and description
    "D401",  # First line of docstring should be in imperative mood
    "D101",  # Missing docstring in public class
    "D100",  # Missing docstring in public module
    "D107",  # Missing docstring in __init__
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D102",  # Missing docstring in public method
    "D105",  # Missing docstring in magic method
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Use of assert in tests
    "E501",  # Line too long in tests
    "B011",  # Do not assert False
    "PLR2004",  # Magic values in tests
    "S603",  # subprocess without shell=true
    "S607",  # Start process with partial path
    "S108",  # Hardcoded temp file
    "S311",  # Non-cryptographic random usage
    "S103",  # Bad file permissions
    "S602",  # subprocess-popen-with-shell-equals-true
    "S110",  # try-except-pass
]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.uv.workspace]
# Allow uv to discover plugin and tool projects (minimal set for linting)
members = [
    "plugins/abstract",
    "plugins/leyline",
    "plugins/conservation",
    "plugins/core"
]

[tool.uv.sources]
# Explicit workspace member configuration
leyline = { workspace = true }
conservation = { workspace = true }
core = { workspace = true }
