[project]
name = "abstract"
version = "1.3.2"
description = "Abstract Claude Code plugin - meta-skills infrastructure"
authors = [{name = "Alex Thola", email = "alexthola@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
    "build>=1.3.0",
]

[project.scripts]
abstract-skills = "abstract.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abstract"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S", "PL", "D"]
extend-ignore = [
    "E203",   # Whitespace before ':'
    "D203",   # One blank line before class docstring
    "D213",   # Multi-line docstring summary should start at second line
    "D107",   # Missing docstring in __init__ (class docstring sufficient)
    "D400",   # First line should end with period (too strict)
    "D401",   # First line should be in imperative mood (not always appropriate)
    "D415",   # First line should end with punctuation (too strict)
    "S603",   # Subprocess call check (we validate inputs)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004", "D103"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
explicit_package_bases = true
mypy_path = ["src"]
exclude = ['^\.venv', '^\.uv-cache', '^fix_.*\.py$']

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", ".uv-cache", ".git", "__pycache__"]
skips = ["B101"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=abstract",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "bdd: Behavior-driven development style tests",
]

[tool.coverage.run]
source = ["abstract"]
omit = ["tests/*", "*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
