[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-palace"
version = "1.9.0"
description = "Spatial knowledge organization plugin for Claude Code using memory palace techniques"
authors = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
maintainers = [
    {name = "Alex Thola", email = "alexthola@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "networkx>=3.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
tokens = [
    "tiktoken>=0.7.0",  # Accurate token estimation (fallback: ~4 chars/token)
]
fast = [
    "xxhash>=3.0",  # 10x faster hashing
]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.14.13",
    "mypy>=1.11.0",
    "ty>=0.0.1a23",
    "pytype>=2024.10.11 ; python_version >= '3.10'",
    "typos>=1.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9,<2.0",
    "blacken-docs>=1.16.0,<2.0",
    "interrogate>=1.7.0,<2.0",
    "pre-commit>=4.0.0",
    "ty>=0.0.1a23",
    "safety>=3.7.0,<4.0",
    "typos>=1.0.0",
    "ruff>=0.14.13",
    "mypy>=1.18.2",
    "types-PyYAML>=6.0.12",
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=memory_palace --cov-report=term-missing --cov-fail-under=90"
filterwarnings = [
    "ignore:builtin type Swig:DeprecationWarning",
    "ignore:builtin type swig:DeprecationWarning",
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for workflow orchestration",
    "performance: Performance and scalability tests",
    "slow: Slow running tests (use with -m slow)",
    "bdd: Behavior-driven development style tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_palace"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
  "S",
  "PL",
  "D",
  "N",
  "SIM",
]

extend-ignore = ["E203", "D203", "D213", "S101"]  # Added S101 for assert usage

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"tests/**/*.py" = ["S101", "PLR2004", "D103", "D205", "D400", "D415", "S108"]
"hooks/**/*.py" = ["S603", "S607", "BLE001", "PLR2004", "D101", "D102"]
"hooks/shared/*.py" = ["PLR0911"]
"scripts/**/*.py" = ["S603", "S607"]
"src/memory_palace/corpus/marginal_value.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["memory_palace", "shared"]

[tool.coverage.run]
source = ["memory_palace"]
branch = true
omit = [
    "hooks/*",
    "tests/*",
    "*/__pycache__/*",
    "src/memory_palace/cli/*",  # CLI entry points
    "src/memory_palace/garden_metrics.py",  # Metrics display utility
    "src/memory_palace/corpus/marginal_value.py",       # Optimization heuristics
    "src/memory_palace/corpus/semantic_deduplicator.py",  # Embedding-based dedup
    "src/memory_palace/corpus/embedding_index.py",        # FAISS integration
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 90

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
exclude = ['^\.venv', '^\.uv-cache']

[[tool.mypy.overrides]]
module = ["shared.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "faiss", "faiss.*", "sentence_transformers", "sentence_transformers.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["leyline", "leyline.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "memory_palace.session_history",
    "memory_palace.corpus.*",
]
disable_error_code = ["arg-type", "return-value", "attr-defined", "assignment", "misc", "override", "name-defined", "call-overload", "union-attr", "type-arg", "no-redef"]

[[tool.mypy.overrides]]
module = [
    "tests.scripts.test_update_vitality_scores",
    "tests.scripts.test_update_autonomy_state",
]
disable_error_code = ["attr-defined"]

[tool.bandit]
exclude_dirs = [".venv", ".uv-cache", ".git", "__pycache__"]
skips = ["B101", "B404", "B603"]
