[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "parseltongue"
version = "1.2.8"
authors = [
    {name = "Claude", email = "claude@anthropic.com"},
]
description = "Python development suite with specialized expertise in testing, performance, async, and packaging"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "psutil>=5.8.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "requests>=2.28.0",
    "toml>=0.10.2",
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "coverage>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/anthropics/parseltongue"
Documentation = "https://parseltongue.readthedocs.io/"
Repository = "https://github.com/anthropics/parseltongue.git"
"Bug Tracker" = "https://github.com/anthropics/parseltongue/issues"

[project.scripts]
parseltongue = "parseltongue.cli:main"

# [tool.setuptools_scm]
# write_to = "parseltongue/_version.py"

[tool.setuptools.packages.find]
# where = ["src"]
include = ["parseltongue*"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=parseltongue",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--tb=short",
]
testpaths = ["tests"]
markers = [
    "unit: Unit tests for individual functions and methods",
    "integration: Integration tests for workflows and end-to-end scenarios",
    "slow: Tests that take longer than 1 second to run",
    "performance: Performance and scalability tests",
    "asyncio: Async-focused tests",
    "testing: Testing-focused tests",
    "packaging: Packaging-focused tests",
    "language_detection: Language detection tests",
    "edge_case: Edge case and boundary condition tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["parseltongue"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
    "parseltongue/_version.py",
    "parseltongue/skills/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]
fail_under = 85
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
extend-ignore = ["S101"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLW0603", # using the global statement
]
unfixable = [
    "B006",   # Do not use mutable data structures for argument defaults
    "RUF001", # Remove ambiguous unicode character
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ARG001", # Unused function args in tests
    "ARG002", # Unused method args in tests
    "PLR2004", # Magic value used in comparison
    "S101",   # Use of assert detected
    "ERA001", # BDD-style comments (Given/When/Then) misdetected as commented code
]
"__init__.py" = [
    "F401",   # Unused import
]
"parseltongue/skills/async_analysis.py" = [
    "PLR0912", # Too many branches - inherent in AST analysis code
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "git.*",
    "psutil.*",
    "aiohttp.*",
    "pytest.*",
]
ignore_missing_imports = true
