[project]
name = "phantom"
version = "0.1.0"
description = "Computer use toolkit for Claude - screenshot capture, mouse/keyboard control, and agent loop"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alex Thola", email = "alex@thola.dev" }]
dependencies = [
    "anthropic>=0.49.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP017", "UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
