[project]
name = "phantom"
version = "1.9.3"
description = "Computer use toolkit for Claude - screenshot capture, mouse/keyboard control, and agent loop"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Alex Thola", email = "alex@thola.dev" }]
dependencies = [
    "anthropic>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phantom"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["UP017", "UP007"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["_pytest.*", "pytest.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short --cov=phantom --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/phantom"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "src/phantom/__main__.py",
    "src/phantom/cli.py",
    "src/phantom/loop.py",
    "src/phantom/display.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 90
